polish up a few things

--- a/assets/css/trivia.css
+++ b/assets/css/trivia.css
@@ -43,3 +43,13 @@ header{
     align-items: center;
     justify-content: center;
 }
+
+input{
+    padding-left: 2px;
+    padding-right: 2px;
+}
+
+label{
+    padding-left: 2px;
+    padding-right: 2px;
+}
